--- a/apps/webApp/index.html
+++ b/apps/webApp/index.html
@@ -8,7 +8,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
+        <!-- stylesheet -->
+        <link rel="stylesheet" href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css" />
         <script src="https://kit.fontawesome.com/a22d2d1b37.js" crossorigin="anonymous"></script>
+        <!-- Ripple Effect from cdn -->
+        <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/ripple.js"></script>
     </head>
 
     <body class="font-sans">
